@@ -29,7 +29,8 @@ SHARED_TRG = $(TARGET)_shared
 SYMLINKS = sfv-hash tiger-hash tth-hash whirlpool-hash has160-hash gost-hash ed2k-link magnet-link
 SPECFILE = dist/rhash.spec
 LIN_DIST_FILES = Makefile ChangeLog INSTALL COPYING README \
-  $(SPECFILE) $(SPECFILE).in $(SOURCES) $(HEADERS) tests/test_rhash.sh \
+  $(SPECFILE) $(SPECFILE).in $(SOURCES) $(HEADERS) \
+  tests/test_rhash.sh tests/test1K.data \
   dist/rhash.1 dist/rhash.1.win.sed dist/rhash.1.html
 WIN_DIST_FILES = dist/MD5.bat dist/magnet.bat dist/rhashrc.sample
 WIN_SRC_FILES  = win32/dirent.h win32/stdint.h win32/unistd.h win32/platform-dependent.h \
