@@ -69,7 +69,6 @@ TEST_EXPECTED="(stdin) F0099E81 B78F440152DBAD00E77017074DC15417 EA8511AE2CA899D
 check "$TEST_RESULT" "$TEST_EXPECTED"
 
 new_test "test with 1Kb data file:    "
-awk 'BEGIN{ for(i=0; i<256*4; i++) { printf("%c", i%256) } }' > test1K.data
 TEST_RESULT=$( $rhash --printf "%f %C %M %H %E %G %T %A %W\n" test1K.data 2>/dev/null )
 TEST_EXPECTED="test1K.data B70B4C26 B2EA9F7FCEA831A4A63B213F41A8855B 5B00669C480D5CFFBDFA8BDBA99561160F2D1B77 5AE257C47E9BE1243EE32AABE408FB6B 890BB3EE5DBE4DA22D6719A14EFD9109B220607E1086C1ABBB51EEAC2B044CBB 4OQY25UN2XHIDQPV5U6BXAZ47INUCYGIBK7LFNI LMAGNHCIBVOP7PP2RPN2TFLBCYHS2G3X D606B7F44BD288759F8869D880D9D4A2F159D739005E72D00F93B814E8C04E657F40C838E4D6F9030A8C9E0308A4E3B450246250243B2F09E09FA5A24761E26B"
 check "$TEST_RESULT" "$TEST_EXPECTED" .
@@ -205,10 +204,3 @@ new_test "test creating torrent file: "
 TEST_RESULT=$( $rhash --btih --torrent --bt-private --bt-piece-length=512 --bt-announce=http://tracker.org/ 'test1K.data' 2>/dev/null )
 check "$TEST_RESULT" "29f7e9ef0f41954225990c513cac954058721dd2  test1K.data"
 rm test1K.data.torrent
-
-# Big file test
-new_test "test with 512 KiB of data:  "
-TEST_512K_RESULT=$( awk 'BEGIN{ for(i=256*2048-1; i>=0; i--) { printf("%c", i%256); } }' | $rhash --simple -CHMETAGW - )
-TEST_512K_EXPECTED="(stdin)  f26e5571  56591858ed59c3122cdeaeb5d32d3592  f629b470578236e1b0edb96028eb9af728cc27fc  vkg7atf26rt5at4jry63lhxmjn5dotww4xedslq  56fd3c004775bc0c667f3f5e23a092f9  6gnw6lf6ve5hdxxytdhhfjiyhm3m66w7  e8843c19609f0b72cb25e4c5b1a1ddfe7078972d89ab78f980b3f6c711f9cabfcbf3ac5e66661d9638a82d96ed5b51dc34e27d402c35cbb296d01cb31976af5d  2cdbbbd51999052cc783637bd28d52e20ced0fb75a908401e696a5fd085157ec"
-check "$TEST_512K_RESULT" "$TEST_512K_EXPECTED"
-rm -f test1K.data
